--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Mozilla Website</title>
 </head>
 <body>
+	<h1>Mochilla firesox</h1>
 	<img src="http://mdn.github.io/beginner-html-site/images/firefox-icon.png" alt="My test image">
 </body>
 </html>
