--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	<h1>Mochilla firesox</h1>
-	<img src="http://mdn.github.io/beginner-html-site/images/firefox-icon.png" alt="My test image">
+	<img src="https://cdn.shopify.com/s/files/1/0917/3096/products/socks-on-fire-socks-1_1024x1024.jpg?v=1513113652" alt="My test image">
 </body>
 </html>
