added paragraphs, list, and link

--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
 <body>
 	<h1>Mochilla firesox</h1>
 	<img src="https://cdn.shopify.com/s/files/1/0917/3096/products/socks-on-fire-socks-1_1024x1024.jpg?v=1513113652" alt="My test image">
+	<p>At Mochilla, we believe everyone has a right to socks that are</p>
+
+	<ul>
+		<li>warm</li>
+		<li>toasty</li>
+		<li>and soft</li>
+	</ul>
+
+	<p>That's why we knit every pair of firesox by hand, using local, freshly-sourced wools and dyes.</p>
+
+	<p>Check out our <a href="https://www.google.com/search?q=fire+socks&rlz=1C5CHFA_enUS733US735&tbm=shop&source=lnms&sa=X&ved=0ahUKEwimtaCGicnYAhUh5oMKHbJeD6wQ_AUICigB&biw=955&bih=807&dpr=1.8">Spring 2018</a> collection.</p>
+
+
 </body>
 </html>
