changed image size

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Mochilla firesox</h1>
-	<img src="https://cdn.shopify.com/s/files/1/0917/3096/products/socks-on-fire-socks-1_1024x1024.jpg?v=1513113652" alt="My test image">
+	<img src="https://cdn.shopify.com/s/files/1/0917/3096/products/socks-on-fire-socks-1_1024x1024.jpg?v=1513113652" alt="My test image" style="width: 500px; height: 500px;">
 	<p>At Mochilla, we believe everyone has a right to socks that are</p>
 
 	<ul>
