--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mozilla Website</title>
+	<title>Mochilla Website</title>
 </head>
 <body>
 	<h1>Mochilla firesox</h1>
