--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Mochilla Website</title>
+	<link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<h1>Mochilla firesox</h1>
